--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,3 +155,17 @@ body{
 }
 /* empty text END */
 /* add new note END */
+
+
+#ClearLocalStorage{
+    position: absolute;
+    top: 5px;
+    color: red;
+    font-size: 9px;
+    cursor: pointer;
+    transition-duration: .2s;
+}
+#ClearLocalStorage:hover{
+    transform: scale(1.2);
+
+}
