--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,9 +50,39 @@ body {
     color: blue;
 }
 
-
 /* icon styles END */
 /* General Changes END*/
+/* hint START */
+.hint {
+    display: inline;
+    font-size: 30px;
+    position: relative;
+    cursor: pointer;
+}
+
+.hint::before {
+    content: 'You can press " = " on your keyboard to save';
+    position: absolute;
+    right:-270px;
+    top: 8px;
+    text-align: center;
+    width: 300px;
+    font-size: 13px;
+    background-color: rgb(125, 116, 116);
+    border-radius: 10px;
+    padding: 5px;
+    color: white;
+    transition-duration: .3s;
+
+    visibility: hidden;
+    opacity: 0;
+}
+.hint:hover::before{
+    visibility: visible;
+    opacity: 1;
+    right:-300px;
+}
+/* hint END */
 
 /* note attributes START */
 .note-attributes {
@@ -71,24 +101,18 @@ body {
     cursor: pointer;
     font-size: 20px;
 }
+
 /* button box */
-.button-box{
+.button-box {
     display: flex;
     justify-content: space-between;
     flex-direction: row;
     width: 100%;
 }
-.button-box i{
-    padding-right:10px ;
-}
-/* added hour */
-each-note-box-styles {
-    font-size: 13px;
-    padding: 5px;
-    border-radius: 10px;
-}
 
-
+.button-box i {
+    padding-right: 10px;
+}
 /* note attributes END */
 /* whole note box styles START */
 .whole-note-box-styles {
@@ -98,7 +122,7 @@ each-note-box-styles {
     gap: 30px;
 
     padding-top: 50px;
-    position: relative;    
+    position: relative;
 }
 
 /* each note box styles START*/
