--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,14 +64,15 @@ body {
     content: 'You can press " = " on your keyboard to save';
     position: absolute;
     right:-270px;
-    top: 8px;
+    top: 6px;
     text-align: center;
     width: 300px;
     font-size: 13px;
-    background-color: rgb(125, 116, 116);
+    background-color: rgb(255, 255, 255);
+    border: 2px solid black;
     border-radius: 10px;
     padding: 5px;
-    color: white;
+    color: black;
     transition-duration: .3s;
 
     visibility: hidden;
