--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,6 +112,8 @@ body {
     right: 35px;
 }
 
+
+
 /* hint END */
 
 /* note attributes START */
@@ -235,6 +237,12 @@ body {
     transition-delay: .2s;
 }
 
+.deleteAllshow {
+    /* we need to use important because we are overwriting an id element which has more 
+    priority over class */
+    display: flex !important;
+}
+
 #delete-all-confirmation span {
     background-color: rgb(204, 204, 204);
     margin-inline: 3px;
@@ -256,12 +264,14 @@ body {
     -ms-user-select: none;
 }
 
-#delete-all-confirmation span:hover{
+#delete-all-confirmation span:hover {
     background-color: rgb(136, 135, 135);
 }
-#delete-all-confirmation span:active{
+
+#delete-all-confirmation span:active {
     background-color: rgb(66, 65, 65);
 }
+
 /* add new note END */
 
 /* Media query */
