--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,6 @@ body {
 .container {
     width: 1300px;
     margin: 25px auto;
-    /* background-image: linear-gradient(90deg, #a1c4fd 10%, #c2e9fb 90%); */
     background-image: linear-gradient(90deg, #ffffff 10%, #c2e9fb 90%);
     padding: 20px;
     border-radius: 10px;
@@ -32,6 +31,8 @@ body {
     outline: none;
     line-height: 25px;
     font-size: 20px;
+    overflow-y: auto;
+    height: 100%;
 }
 
 /* icon styles START */
@@ -119,7 +120,7 @@ body {
 /* note attributes START */
 .note-attributes {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: column;
     background-color: rgb(255, 255, 255);
     padding: 10px;
@@ -166,7 +167,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
 
-    width: 250px;
+    width: 220px;
     height: 250px;
     border-radius: 30px 5px 30px 5px;
     padding: 15px;
