--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,7 +154,8 @@ body {
     padding: 70px;
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;
+    justify-content: space-between;
+    gap: 20px;
 
     padding-top: 50px;
     position: relative;
